fixed hero banner text that was being cut off at a given width

--- a/components/hero-banner.scss
+++ b/components/hero-banner.scss
@@ -13,6 +13,7 @@ $HERO_BANNER_PADDING_RESPONSIVE: 2%;
     position: relative;
     top: 238px;
     max-width: 700px;
+    z-index: 1;
     @include media("<desktop") {
       padding: 0px 0px;
       padding-left: 0px;
